2000-11-15  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_start_cursor_blink): Apply
	patch from Mikael Hermansson to temporarily stop blinking while
	the user is using the keyboard to type or navigate. 

	Also, when blinking, stay on for longer than we stay off. Also,
	return from start_cursor_blink if !cursor_visible, to save
	checking that flag all over the place before we call
	start_cursor_blink.

Thu Nov 16 01:25:51 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkrc.*: Remove the locale-specific gtkrc's, as they
	only contain a "fontset" line, which is now ignored.

	* gtk/gtkentry.c (gtk_entry_button_release): Make 
	double-click-to-select-word work.
	
Wed Nov 15 20:16:54 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_line_end): 
	Don't move back one char when we are actually at the end of the 
	paragraph.

2000-11-15  Robert Brady  <robert@suse.co.uk>

	* modules/input/iminuktitut.c (inuktitut_compose_seqs): 
	'o' < 'p'.
	
	* gtk/gtkmain.c: s/CODSET/CODESET/, include <libintl.h> for
	bind_textdomain_codeset.

	(gtk_init_check): Make the warning about translating default:LTR
	sterner.
	
Wed Nov 15 18:39:40 2000  Owen Taylor  <otaylor@redhat.com>

	* **/Makefile.am : remove unecessary rules for win32-specific
	config-substituted targets. If you want these rules, use
	--enable-maintainer-mode (called automatically by autogen.sh).
	Stops a lot of unneccessary make-time warnings.

	* gtk/gtktext{layout,display}.c: Factor in total width as
	well as screen when figuring alignment for word-wrap as well as
	no wrap; this is necessary to handle lines that cannot be wrapped
	at all.

2000-11-15  Havoc Pennington  <hp@redhat.com>

	* gtk/testtext.c: Implement essential color cycling feature

2000-11-15  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (changed_handler): Invalidate the side windows
	when we invalidate the main window.
